[package]
name = "moo-offchain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version= "1.28.1", features = ["full"] }
tokio-stream = "0.1.14"
warp = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
futures = { version = "0.3", default-features=false}
uuid = { version = "1.3.2", features = ["v4", "fast-rng", "macro-diagnostics"]}